--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Start nav -->
     <nav>
         <div class="container">
-            <a href="index.html" class="logo"><i class="fa-brands fa-neos"></i>ariman</a>
+            <a href="index.html" class="logo"><i class="fa-brands fa-neos"></i><span>ariman</span></a>
             <div class="nav-links">
                 <a href="#home">Home</a>
                 <a href="#about">About</a>
@@ -182,6 +182,8 @@
             </div>
         </div>
     </section>
+    <!-- Scroll icon -->
+    <span class="scroll"><i class="fa-solid fa-up-long"></i></span>
     <!-- Start footer -->
     <footer>
         <div class="container">
