--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="container">
             <a href="index.html" class="logo"><i class="fa-brands fa-neos"></i><span>ariman</span></a>
             <div class="nav-links">
-                <a href="#home">Home</a>
+                <a href="#header">Home</a>
                 <a href="#about">About</a>
                 <a href="#projects">Projects</a>
                 <a href="#contact">Contact</a>
