--- a/index.html
+++ b/index.html
@@ -82,7 +82,6 @@
                             utilized AI to accurately diagnose dementia stage based on MRI images. </p>
                         <div class="project-links">
                             <a target="_blank" href="https://narimanawny78.github.io/Praecox-GR-Project/" class="project-btn">View Project</a>
-                            <a target="_blank" href="https://github.com/narimanawny78/Praecox-GR-Project.git" class="project-btn">Source Code</a>
                         </div>
                     </div>
                 </div>
@@ -98,10 +97,9 @@
                       </div>
                     <div class="project-content">
                         <h3>Landing page Design</h3>
-                        <p>A user-friendly landing page</p>
+                        <p>A user-friendly landing page ,designed to showcase products, capture leads, and boost user engagement effectively.</p>
                         <div class="project-links">
                             <a target="_blank" href="#" class="project-btn">View Project</a>
-                            <a target="_blank" href="#" class="project-btn">Source Code</a>
                         </div>
                     </div>
                 </div>
@@ -117,10 +115,9 @@
                       </div>
                     <div class="project-content">
                         <h3>E-commerce Platform</h3>
-                        <p>A complete e-commerce solution with advanced features.</p>
+                        <p>A complete and modern e-commerce built to drive sales and enhance shopping experience online.</p>
                         <div class="project-links">
                             <a target="_blank" href="#" class="project-btn">View Project</a>
-                            <a target="_blank" href="#" class="project-btn">Source Code</a>
                         </div>
                     </div>
                 </div>
